adjust spacing on 'applicable shipping' note in cart, fix unclosed anchor, re #70

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -101,6 +101,9 @@
         @media screen and (max-width: $break-small)
           display: none
 
+      .price
+        font-size: 11px
+
       div.remove
         float: right
 
@@ -196,6 +199,9 @@
         @media screen and (max-width: $break-small)
           font-size: 12px
 
+      b + span
+        font-size: 11px
+
       span
         display: block
         font-style: italic
@@ -222,6 +228,11 @@
           border-top: none
           padding-top: 0
 
+
+    .total_price
+      line-height: 1.4
+      position: relative
+      top: 3px
 
     .submit
       padding-left: 66%
